# tau2

./: .all_configs  .gitignore  .gitmodules  .last_config  COPYRIGHT  CREDITS  Changes  FFT  INSTALL  LICENSE  Makefile  Makefile.orig  Makefile.skel  Makefile.win32  README  README.CHARM.html  README.CUPTI  README.DYNINST  README.JAVA  README.MUSE  README.ToM  README.ToM.txt  README.WINDOWS.txt  README.android  README.gpu  README.mic_offload  README.minGW  README.offline-configuration  README.sampling  Windows-Readme.txt  android.binutils-2.23.2.patch  buildjava.sh  configure  core.REMOVED.git-id  gpu.mk  installtau  kestrel.bashrc  known-issues  minGW.patch  profile.0.0.0  (+6 more)
plugins/llvm/: CMakeLists.txt  Makefile
plugins/llvm/src/: CMakeLists.txt  Instrument.cpp  README
utils/opari2/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  OPEN_ISSUES  README  THANKS  aclocal.m4  configure  configure.ac
utils/opari2-2.0/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac
utils/opari2-2.0/build-frontend/: Makefile.am  Makefile.in  configure  configure.ac
utils/opari2-2.0/build-includes/: common.am  frontend-only.am
utils/opari2-2.0/doc/example/: Makefile.in
utils/opari2-2.0/doc/tags/: opari2.tag
utils/opari2-2.0/src/: config-custom.h
utils/opari2-2.0/src/opari/: Makefile.inc.am  common.h  handler.cc  handler.h  ompragma.cc  ompragma.h  ompragma_c.cc  ompragma_f.cc  ompregion.cc  ompregion.h  opari2.cc  opari2.h  opari2_config.cc  opari_user_2.dox  process_c.cc  process_f.cc  process_omp.cc
utils/opari2-2.0/src/pomp-lib-dummy/: Makefile.inc.am  foos.c  pomp2_fwrapper_base.c  pomp2_lib.c  pomp2_lib.h  pomp2_parse_init_regions.awk.in  pomp2_region_info.c  pomp2_region_info.h
utils/opari2-2.0/test/: Makefile.inc.am  c_test.sh.in  f77_test.sh.in  f90_test.sh.in  jacobi_c++_test.sh.in  jacobi_c_test.sh.in  jacobi_f77_test.sh.in  jacobi_f90_test.sh.in  replacePaths_f77.awk  replacePaths_f90.awk
utils/opari2-2.0/test/data/: test1.c  test1.c.out  test1.f  test1.f.out  test1.f90  test1.f90.opari.inc.out  test1.f90.out  test2.c  test2.c.opari.inc.out  test2.c.out  test2.f  test2.f.opari.inc.out  test2.f.out  test2.f90  test2.f90.opari.inc.out  test2.f90.out  test3.c  test3.c.opari.inc.out  test3.c.out  test3.f.opari.inc.out  test3.f.out  test3.f90  test3.f90.opari.inc.out  test3.f90.out  test4.c  test4.c.opari.inc.out  test4.c.out  test4.f  test4.f.opari.inc.out  test4.f.out  test4.f90  test4.f90.opari.inc.out  test4.f90.out  test5.c.opari.inc.out  test5.c.out  test5.f.opari.inc.out  test5.f.out  test5.f90  test5.f90.out  test6.c.out  (+12 more)
utils/opari2/autom4te.cache/: output.1  requests  traces.0  traces.1
utils/opari2/build-config/: VERSION  ltmain.sh  test-driver
utils/opari2/build-config/common/: Makefile.inc.am  common.am  config-common.h  generate-library-dependencies-la-object.hpp  generate-library-dependencies.sh  generate-library-version.sh  generate-package-version.sh  platforms.am  process_arguments.awk
utils/opari2/build-config/m4/: libtool.m4  opari2_compiler_and_flags.m4  opari2_fortran.m4
utils/opari2/build-frontend/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  opari2_usage.h
utils/opari2/build-frontend/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
utils/opari2/build-includes/: common.am  frontend-only.am
utils/opari2/doc/: Makefile.inc.am
utils/opari2/doc/doxygen-dev/: doxygen-dev.cfg.in
utils/opari2/doc/doxygen-user/: doxygen-user-component.cfg.in  doxygen-user.cfg.in  main_1.dox.in  main_2.dox.in  opari2-config_usage.dox.in  opari2_usage.dox.in
utils/opari2/doc/example/: Makefile.in  example.c  example.f90
utils/opari2/doc/example_user_instrumentation/: Makefile.in  example_user_instrumentation.c  example_user_instrumentation.f90
utils/opari2/doc/tags/: opari2.tag
utils/opari2/include/opari2/: pomp2_lib.h
utils/opari2/src/: config-custom.h  config-frontend.h.in  config.h
utils/opari2/src/opari/: Makefile.inc.am  Makefile.std  common.h  handler.cc  handler.h  ompragma.cc  ompragma.h  ompragma_c.cc  ompragma_f.cc  ompregion.cc  ompregion.h  opari2.cc  opari2.h  opari2_config.cc  opari2_config.h  opari2_config_tool_frontend.h.in  opari2_directive.cc  opari2_directive.h  opari2_directive_definition.h  opari2_directive_entry.h  opari2_directive_manager.cc  opari2_directive_manager.h  opari2_parser_c.cc  opari2_parser_c.h  opari2_parser_f.cc  opari2_parser_f.h  process_c.cc  process_f.cc  process_omp.cc
utils/opari2/src/opari-lib-dummy/: Makefile.inc.am  foos.c  getfname.f  opari2_ctc_parser.h  opari2_ctc_token.h  pomp2_fwrapper.c  pomp2_fwrapper_base.c  pomp2_fwrapper_base.h  pomp2_lib.c  pomp2_parse_init_regions.awk.in  pomp2_region_info.c  pomp2_region_info.h
utils/opari2/src/pomp-lib-dummy/: Makefile  Makefile.inc.am  foos.c  getfname.f  pomp2_fwrapper.c  pomp2_fwrapper_base.c  pomp2_fwrapper_base.h  pomp2_lib.c  pomp2_lib.h  pomp2_parse_init_regions.awk.in  pomp2_region_info.c  pomp2_region_info.h
utils/opari2/test/: Makefile.inc.am  awk_script_test.sh.in  c_test.sh  c_test.sh.in  cxx_test.sh.in  f77_test.sh  f77_test.sh.in  f90_test.sh  f90_test.sh.in  jacobi_c++_test.sh  jacobi_c++_test.sh.in  jacobi_c_test.sh  jacobi_c_test.sh.in  jacobi_f77_test.sh  jacobi_f77_test.sh.in  jacobi_f90_test.sh  jacobi_f90_test.sh.in  jacobi_f_test.sh.in  opari.tab.c.out  opari.tab.f.out  out.oparirc.f  replacePaths_c.awk  replacePaths_f77.awk  replacePaths_f90.awk  table_test.sh
utils/opari2/test/data/: awk_script_test.input  awk_script_test.out.in  test1.c  test1.c.opari.inc.out  test1.c.out  test1.cpp  test1.cpp.out  test1.f  test1.f.opari.inc.out  test1.f.out  test1.f90  test1.f90.opari.inc.out  test1.f90.out  test1.prep.c  test1.prep.c.opari.inc.out  test1.prep.c.out  test10.f90  test10.f90.opari.inc.out  test10.f90.out  test11.f90  test11.f90.opari.inc.out  test11.f90.out  test1_a.f  test1_a.f.out  test1_a.f90  test1_a.f90.out  test1_disable.all.f.opari.inc.out  test1_disable.all.f.out  test1_disable.atomic.f.opari.inc.out  test1_disable.atomic.f.out  (+104 more)
(+4757 files in other folders)
